- 
    
Bug
 - 
    Resolution: Done
 - 
    
P3: Somewhat important
 - 
    5.12.5
 - 
    None
 
- 
        e35fdc4763a54aff3768bcd0144ae97249bd7185 (qt-labs/qthttpserver/master) 45e11398922bd605747fc07dbe71aba642315155 (qt-extensions/qthttpserver/dev)
 
I wasn't able to crosscompile QHttpServer for my RaspberryPi:
[...] /home/schlumpf/raspi1/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin/arm-linux-gnueabihf-g++ -c -include .pch/Qt5HttpServer -pipe -marm -mfpu=vfp -mtune=arm1176jzf-s -march=armv6zk -mabi=aapcs-linux -mfloat-abi=hard --sysroot=/home/schlumpf/raspi1/sysroot -O2 -std=c++11 -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wno-missing-field-initializers -D_REENTRANT -fPIC -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_HTTPSERVER_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_SSLSERVER_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I. -I../3rdparty/http-parser -I../../include -I../../include/QtHttpServer -I../../include/QtHttpServer/5.12.0 -I../../include/QtHttpServer/5.12.0/QtHttpServer -I../../include/QtSslServer -I/home/schlumpf/raspi1/qt5pi/include -I/home/schlumpf/raspi1/qt5pi/include/QtNetwork -I/home/schlumpf/raspi1/qt5pi/include/QtCore/5.12.5 -I/home/schlumpf/raspi1/qt5pi/include/QtCore/5.12.5/QtCore -I/home/schlumpf/raspi1/qt5pi/include/QtCore -I.moc -I/home/schlumpf/raspi1/qt5/mkspecs/devices/linux-rasp-pi-g++ -o .obj/qhttpserverresponder.o qhttpserverresponder.cpp qhttpserverresponder.cpp: In constructor ‘IOChunkedTransfer<BUFFERSIZE>::IOChunkedTransfer(QIODevice*, QIODevice*)’: qhttpserverresponder.cpp:85:82: error: no matching function for call to ‘QObject::connect(const QPointer<QIODevice>&, void (QObject::*)(QObject*), QPointer<QIODevice>&, void (QObject::*)())’ QObject::connect(sink, &QObject::destroyed, source, &QObject::deleteLater); [...]
I use a gcc4.8.3 for crosscompiling, and this seems to be the problem. Maybe this Bug is related: https://bugreports.qt.io/browse/QTBUG-72991 and https://codereview.qt-project.org/c/qt/qtremoteobjects/+/247134
| For Gerrit Dashboard: QTBUG-79345 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 278471,2 | Fix compilation with gcc 4.8 | master | qt/qthttpserver | Status: MERGED | +2 | 0 | 
| 279227,2 | Fix compilation with gcc 4.8 | master | qt/qthttpserver | Status: MERGED | +2 | 0 |