Fix compilation with gcc 4.8

GCC 4.8 doesn't like using QPointers in signal connections.

Fixes: QTBUG-79345
Change-Id: I7cd4d79eee3ce7f07874e13f5ecfa9925090d68d
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>