src/httpserver/qhttpserverresponder.cpp
@@ -75,16 +75,16 @@ struct IOChunkedTransfer
     IOChunkedTransfer(QIODevice *input, QIODevice *output) :
         source(input),
         sink(output),
-        bytesWrittenConnection(QObject::connect(sink, &QIODevice::bytesWritten, [this] () {
+        bytesWrittenConnection(QObject::connect(sink.data(), &QIODevice::bytesWritten, [this] () {
               writeToOutput();
         })),
-        readyReadConnection(QObject::connect(source, &QIODevice::readyRead, [this] () {
+        readyReadConnection(QObject::connect(source.data(), &QIODevice::readyRead, [this] () {
             readFromInput();
         }))
     {
         Q_ASSERT(!source->atEnd());  // TODO error out
-        QObject::connect(sink, &QObject::destroyed, source, &QObject::deleteLater);
-        QObject::connect(source, &QObject::destroyed, [this] () {
+        QObject::connect(sink.data(), &QObject::destroyed, source, &QObject::deleteLater);
+        QObject::connect(source.data(), &QObject::destroyed, [this] () {
             delete this;
         });
         readFromInput();
